# brokkr-flash

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  make-release.yml
assets/: INSTALLER_README.txt  INSTALLER_WELCOME.txt  brokkr.icns  brokkr.qrc  icon.aps  icon.rc
src/: main.cpp
src-gui/: brokkr_wrapper.cpp  brokkr_wrapper.hpp  main_gui.cpp
src/app/: cli.cpp  cli.hpp  cli_mode.cpp  interface.cpp  interface.hpp  md5_verify.cpp  md5_verify.hpp  md5_xxh3_cache.cpp  md5_xxh3_cache.hpp  run.cpp  run.hpp  version.hpp
src/core/: byte_transport.hpp  bytes.hpp  prefetcher.hpp  signal_shield.cpp  status.hpp  str.hpp  thread_pool.cpp  thread_pool.hpp
src/crypto/: md5.c  md5.h
src/io/: lz4_frame.cpp  lz4_frame.hpp  source.cpp  source.hpp  tar.cpp  tar.hpp
src/lz4/: lz4.c  lz4.h
src/platform/: platform_all.hpp
src/platform/linux/: signal_shield.cpp  signal_shield.hpp  single_instance.cpp  single_instance.hpp  sysfs_usb.cpp  sysfs_usb.hpp  tcp_transport.cpp  tcp_transport.hpp  usbfs_conn.cpp  usbfs_conn.hpp  usbfs_device.cpp  usbfs_device.hpp
src/platform/macos/: signal_shield.cpp  single_instance.cpp  single_instance.hpp  sysfs_usb.cpp  sysfs_usb.hpp  tcp_transport.cpp  tcp_transport.hpp  usbfs_conn.cpp  usbfs_conn.hpp  usbfs_device.cpp  usbfs_device.hpp
src/platform/posix-common/: filehandle.hpp  signal_shield.cpp  single_instance.cpp  single_instance.hpp  tcp_transport.cpp  tcp_transport.hpp
src/platform/windows/: signal_shield.cpp  signal_shield.hpp  single_instance.cpp  single_instance.hpp  sysfs_usb.cpp  sysfs_usb.hpp  tcp_transport.cpp  tcp_transport.hpp  usbfs_conn.cpp  usbfs_conn.hpp  usbfs_device.cpp  usbfs_device.hpp
src/protocol/odin/: flash.cpp  flash.hpp  group_flasher.cpp  group_flasher.hpp  odin_cmd.cpp  odin_cmd.hpp  odin_wire.hpp  pit.cpp  pit.hpp  pit_transfer.cpp  pit_transfer.hpp
tests/: test_endian.cpp  test_md5.cpp  test_md5_xxh3_cache.cpp
